@@ -1,3 +1,6 @@
+2013-07-13
+ * Added support for Automated Weather Station by mlab
+
 2013-06-18
  * Added support for Planewave Instruments' Hedrick Focuser
 
